v0.64
----------------------
- Added the option to make series spoiler free, by adding dummy videos to the list.
- Also added the option hide player names and races in events, e.g., for group stages.
- Fixed Twitch.
- Other small bugfixes.

v0.63
----------------------
Minor changes to the SC2Casts website called for a bugfix.

v0.62
----------------------
First version distributed via its own repository for testing.

v0.6
----------------------
- Complete rework by hackebeil. Thanks to the original authors of the plugin (Kristoffer Petersson, Phek, G Nyman, Bsdfish) and all other contributors for their hard work.
- Source now includes parts of the twitch plugin to allow twitch videos to be played with a start offset. Thanks to StateOfTheArt and ccaspers and all the other contributors for their hard work.

- All old features are repaired.
- New features:
--- Twitch support
--- Browse players
--- Various context menu option, e.g., Queue all items of a series, Go to players' games, or Go to casters' games
--- Optional colors
--- Parsing about 10x faster
--- Automatically marks watched series
--- Fanart and logo

v0.4.8
----------------------
- Work with the new source format of sc2casts page
- Single game youtube videos should work now as well

v0.4.7
----------------------
- Fix for new 'embed' Youtube link
- Cleaned up code (retiman)

v0.4.6
----------------------
- Changed backend to use the youtube plugin to work around youtube issues.

v0.4.5
----------------------
- Fixed video path for some videos according to Phek's instructions http://forum.xbmc.org/showthread.php?tid=98094&page=3

v0.4.4
----------------------
- Updated some code due to changes on Youtube

v0.4.3
----------------------
- Updated the code

v0.4.2
----------------------
- Updated URL:s in sc2casts.py

v0.4.1
----------------------
- Added strings to strings.xml

v0.4.0
----------------------
- Version 0.4.0 is now uploaded.
- Submitted to the official repo